# p2plite

./: .gitignore  CMakeLists.txt  LICENSE  README.md  p2plite-config.cmake.in  vcpkg.json
cmake/: FindGLib.cmake  FindLibnice.cmake
examples/: CMakeLists.txt
examples/chatroom/: main.cpp
include/p2plite/: addr.h  nat.h
src/p2plite/: nat.cpp
